manifests/workloads/keycloak/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: oidc
  name: oidc
