manifests/workloads/keycloak/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-extname
  namespace: oidc
  annotations:
    external-dns.alpha.kubernetes.io/hostname: keycloak.robotwizard.co.uk
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/instance: keycloak
spec:
  type: ExternalName
  externalName: traefik.robotwizard.co.uk
  sessionAffinity: None
